[css] fix body x overflow

--- a/src/css/global/layout.scss
+++ b/src/css/global/layout.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .page {
   display: grid;
   grid-template-columns: 1fr minmax(0, 1000px) 1fr;
